--- a/src/components/Presidents/Presidents.css
+++ b/src/components/Presidents/Presidents.css
@@ -6,7 +6,25 @@
     border-radius: 10px;
 }
 .president-image{
-    width: 100px;
+    width: 130px;
+    height: 130px;
     margin-top: 10px;
     border-radius: 15px;
+}
+.regular-button{
+    background-color: lightseagreen;
+    color: white;
+    font-weight: 600;
+    padding: 5px 40px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+.social-icon{
+    font-size: 24px;
+}
+.social-icon a{
+    margin-right: 20px;
+    color: rgb(85, 83, 83);
 }
